--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yusen-slack",
+  "name": "usen-slack",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,14 +8,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/megos/yusen-slack.git"
+    "url": "git+https://github.com/megos/usen-slack.git"
   },
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/megos/yusen-slack/issues"
+    "url": "https://github.com/megos/usen-slack/issues"
   },
-  "homepage": "https://github.com/megos/yusen-slack#readme",
+  "homepage": "https://github.com/megos/usen-slack#readme",
   "dependencies": {
     "cheerio-httpcli": "^0.6.9"
   }
