--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/megos/usen-slack#readme",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "cheerio-httpcli": "^0.6.9",
-    "cron": "^1.1.1"
+    "cron": "^1.1.1",
+    "express": "^4.14.0"
   }
 }
