--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.15.2",
     "cheerio-httpcli": "^0.6.9",
     "cron": "^1.1.1",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "request-promise": "^4.1.1"
   }
 }
