--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "cheerio-httpcli": "^0.6.9",
     "cron": "^1.1.1",
     "express": "^4.14.0",
-    "request-promise": "^4.1.1"
+    "request-promise": "^4.1.1",
+    "socket.io": "^1.7.2",
+    "socket.io-client": "^1.7.2"
   }
 }
