add start script

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "usen-slack",
   "version": "1.0.0",
-  "description": "",
+  "description": "usen nowplaying bot for slack/mattermost",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
